--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,16 @@
 Package: Magellan
-Title: Magellan: a workflow manager
-Version: 0.1
+Title: A Pipeline Manager
+Version: 0.2
 Authors@R: person('Samuel', 'Wieczorek', email = 'samuel.wieczorek@cea.fr', role = c('cre', 'aut'))
+Maintainer: Samuel Wieczorek <samuel.wieczorek@cea.fr>
 Description: A shiny app to navigate through data processing tools.
 License: Artistic-2.0
 Imports: 
     config,
     golem,
     shiny,
-    R6
+    R6,
+    QFeatures (>= 1.1.1)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
