--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,16 @@
 export(Pipeline)
 export(Process)
 export(ScreenManager)
+export(mod_bsmodal_server)
+export(mod_bsmodal_ui)
+export(mod_format_DT_server)
+export(mod_format_DT_ui)
+export(mod_popover_for_help_server)
+export(mod_popover_for_help_ui)
 export(run_app)
+import(DT)
 import(shiny)
+importFrom(DT,dataTableOutput)
 importFrom(R6,R6Class)
 importFrom(config,get)
 importFrom(golem,activate_js)
@@ -12,5 +20,13 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(htmlwidgets,JS)
+importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
+importFrom(shinyBS,addPopover)
+importFrom(shinyBS,bsPopover)
+importFrom(shinyBS,bsTooltip)
+importFrom(shinyjs,inlineCSS)
+importFrom(shinyjs,useShinyjs)
 importFrom(utils,data)
