--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,15 @@ Collate:
     mod_bsmodal.R
     mod_popover_for_help.R
     mod_format_DT.R
+    code_for_process.R
+    code_for_pipeline.R
+    commonFuncs.R
+    mod_Protein.R
+    mod_Protein_Description.R
+    mod_Protein_Normalization.R
+    mod_nav_process.R
+    mod_timeline_h.R
+    mod_timeline_v.R
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
