--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,12 @@
 
 export(Add_Item_to_Dataset)
 export(Keep_Items_from_Dataset)
-export(Send_Result_to_Caller)
+export(Timestamp)
 export(mod_bsmodal_server)
 export(mod_format_DT_server)
 export(mod_nav_pipeline_server)
 export(mod_nav_process_server)
+export(mod_nav_process_ui)
 export(mod_popover_for_help_server)
 export(mod_popover_for_help_ui)
 export(mod_timeline_h_server)
