Updates to pass BiocCheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(mod_timeline_v_server)
 export(mod_timeline_v_ui)
 export(run_app)
 import(DT)
+import(QFeatures)
 import(shiny)
 importFrom(config,get)
 importFrom(golem,activate_js)
