--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Imports:
     htmlwidgets,
     shinyBS,
     shinyjs,
-    utils
+    utils,
+    sass,
+    shinyjqui
 Collate: 
     app_config.R
     app_server.R
