--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(btn_style)
 export(btn_success_color)
 export(global)
 export(mod_bsmodal_server)
+export(mod_bsmodal_ui)
 export(mod_format_DT_server)
 export(mod_nav_pipeline_server)
 export(mod_nav_pipeline_ui)
@@ -31,12 +32,15 @@ importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
 importFrom(htmlwidgets,JS)
+importFrom(sass,sass)
+importFrom(sass,sass_file)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
 importFrom(shiny,tagList)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsPopover)
 importFrom(shinyBS,bsTooltip)
+importFrom(shinyjqui,jqui_draggable)
 importFrom(shinyjs,inlineCSS)
 importFrom(shinyjs,useShinyjs)
 importFrom(utils,data)
