--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(run_app)
 import(DT)
 import(QFeatures)
 import(shiny)
+importFrom(DT,dataTableOutput)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
