--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,6 @@ BugReports: https://github.com/samWieczorek/Magellan/issues
 Suggests: 
     knitr,
     rmarkdown,
-    BiocStyle
+    BiocStyle,
+    crayon
 VignetteBuilder: knitr
