--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ import(DT)
 import(QFeatures)
 import(shiny)
 importFrom(DT,dataTableOutput)
+importFrom(QFeatures,readQFeatures)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
@@ -40,3 +41,4 @@ importFrom(shinyjs,inlineCSS)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
 importFrom(utils,data)
+importFrom(utils,globalVariables)
