--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,11 +16,9 @@ export(mod_timeline_h_ui)
 export(mod_timeline_v_server)
 export(mod_timeline_v_ui)
 export(run_app)
+import(DT)
 import(QFeatures)
 import(shiny)
-importFrom(DT,dataTableProxy)
-importFrom(DT,datatable)
-importFrom(DT,replaceData)
 importFrom(QFeatures,readQFeatures)
 importFrom(config,get)
 importFrom(golem,activate_js)
