--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,11 @@ export(redBtnClass)
 export(run_app)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
-import(DT)
 import(shiny)
+importFrom(DT,"%>%")
+importFrom(DT,dataTableProxy)
+importFrom(DT,datatable)
+importFrom(DT,replaceData)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
