--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,11 @@ Authors@R: person('Samuel', 'Wieczorek', email = 'samuel.wieczorek@cea.fr', role
 Description: Magellan is a collection of Shiny modules which provide the basis for a generic workflow manager for data processing toolswith several steps. It works in combination with any package which implements data processing pipelines compliant with Magellan such as MSPipelines and Prostar. It can handle lists of objects and manage a hierarchy of levels.
 License: Artistic-2.0
 Imports: 
+    methods,
     config,
     golem,
-    shiny,
     DT,
+    shiny,
     htmlwidgets,
     shinyBS,
     shinyjs,
