--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.99.2
 Authors@R: person('Samuel', 'Wieczorek', email = 'samuel.wieczorek@cea.fr', role = c('cre', 'aut'))
 Description: Magellan is a collection of Shiny modules which provide the basis for a generic workflow manager for data processing toolswith several steps. It works in combination with any package which implements data processing pipelines compliant with Magellan such as MSPipelines and Prostar. It can handle lists of objects and manage a hierarchy of levels.
 License: Artistic-2.0
+Depends: R (>= 4.1.0)
 Imports: 
     methods,
     config,
@@ -18,6 +19,7 @@ Imports:
     shinyjqui
 Collate: 
     AllGenerics.R
+    data.R
     app_config.R
     app_server.R
     app_ui.R
@@ -32,7 +34,7 @@ Collate:
     mod_timeline_v.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
-LazyData: false
+LazyData: true
 RoxygenNote: 7.1.2
 URL: https://github.com/samWieczorek/Magellan
 BugReports: https://github.com/samWieczorek/Magellan/issues
@@ -40,6 +42,5 @@ Suggests:
     knitr,
     rmarkdown,
     BiocStyle,
-    crayon,
-    QFeatures
+    crayon
 VignetteBuilder: knitr
