--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: 2.11.2
+pandoc: 2.14.0.3
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   CreatePipeline: CreatePipeline.html
+  CreateProcess: CreateProcess.html
   Magellan: Magellan.html
-last_built: 2021-10-28T16:55Z
+last_built: 2021-10-29T11:46Z
 
