--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,15 +6,14 @@ Description: Magellan is a collection of Shiny modules which provide the basis f
 License: Artistic-2.0
 Depends: R (>= 4.1.0)
 Imports: 
-    methods,
     config,
+    methods,
     golem,
     DT,
     shiny,
     htmlwidgets,
     shinyBS,
     shinyjs,
-    utils,
     sass,
     shinyjqui
 Collate: 
@@ -32,6 +31,7 @@ Collate:
     mod_navigation.R
     mod_timeline_h.R
     mod_timeline_v.R
+    create_Process_Template.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
