--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Collate:
     mod_navigation.R
     mod_timeline_h.R
     mod_timeline_v.R
+    code_used_by_modules.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
