--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,8 +2,9 @@ pandoc: 2.11.2
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
-  CreatePipeline: CreatePipeline.html
-  CreateProcess: CreateProcess.html
+  CreateComplexWorkflow: CreateComplexWorkflow.html
+  CreateSimpleWorkflow: CreateSimpleWorkflow.html
   Magellan: Magellan.html
-last_built: 2021-11-03T13:59Z
+  useMagellanForDevs: useMagellanForDevs.html
+last_built: 2021-11-05T08:50Z
 
