--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,9 @@ Collate:
     mod_timeline_h.R
     mod_timeline_v.R
     code_used_by_modules.R
+    general_nav_funcs.R
+    pipeline_funcs.R
+    process_funcs.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
