Add importFrom for utils package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,3 +51,4 @@ importFrom(shinyjqui,jqui_draggable)
 importFrom(shinyjs,inlineCSS)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
+importFrom(utils,globalVariables)
