--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,9 @@ Collate:
     code_used_by_external_modules.R
     mod_Debug_Infos.R
     mod_nav.R
-    test.R
+    general_nav_funcs.R
+    pipeline_funcs.R
+    process_funcs.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
