--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ Collate:
     general_nav_funcs.R
     pipeline_funcs.R
     process_funcs.R
-    general_nav_observers.R
+    build_nav_ui.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
