steps name can be with several words

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,6 +49,5 @@ BugReports: https://github.com/samWieczorek/Magellan/issues
 Suggests: 
     knitr,
     rmarkdown,
-    BiocStyle,
-    crayon
+    BiocStyle
 VignetteBuilder: knitr
