--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,13 @@
 
 export(CheckConfig)
 export(CheckProcessCode)
+export(FindClosingParenthesis)
 export(ModuleExists)
 export(PrevNextBtnClass)
 export(Timestamp)
 export(btn_style)
 export(btn_success_color)
-export(createProcessTemplateForExpert)
+export(createModuleTemplate)
 export(default_pos)
 export(global)
 export(mod_Debug_Infos_server)
@@ -50,4 +51,6 @@ importFrom(shinyjqui,jqui_draggable)
 importFrom(shinyjs,inlineCSS)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
+importFrom(stringi,stri_locate)
+importFrom(stringi,stri_locate_all)
 importFrom(utils,globalVariables)
