clean example scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,17 @@ export(CheckProcessCode)
 export(FindClosingParenthesis)
 export(ModuleExists)
 export(PrevNextBtnClass)
+export(Save_Object)
+export(SimpleWorflowCoreCode)
 export(Timestamp)
+export(Upload_Object)
 export(btn_style)
 export(btn_success_color)
 export(createModuleTemplate)
 export(default_pos)
 export(global)
 export(mod_Debug_Infos_server)
+export(mod_Debug_Infos_ui)
 export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_format_DT_server)
