--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,14 @@
 
 export(CheckConfig)
 export(CheckProcessCode)
+export(ComposedeWorflowCoreCode)
 export(FindClosingParenthesis)
-export(ModuleExists)
+export(Found_Mod_Funcs)
+export(Get_Code_Update_Config)
+export(Get_Code_Update_Config_Pipeline)
+export(Get_Code_for_Description_renderUI)
+export(Get_Code_for_module_Description)
+export(Module_Return_Func)
 export(PrevNextBtnClass)
 export(Save_Object)
 export(SimpleWorflowCoreCode)
@@ -13,6 +19,8 @@ export(btn_style)
 export(btn_success_color)
 export(createModuleTemplate)
 export(default_pos)
+export(example_mod_Pipeline)
+export(example_mod_Process)
 export(global)
 export(mod_Debug_Infos_server)
 export(mod_Debug_Infos_ui)
@@ -23,7 +31,10 @@ export(mod_nav_server)
 export(mod_nav_ui)
 export(mod_popover_for_help_server)
 export(mod_popover_for_help_ui)
+export(mod_timeline_h_server)
 export(mod_timeline_h_ui)
+export(mod_timeline_v_server)
+export(mod_timeline_v_ui)
 export(optionsBtnClass)
 export(redBtnClass)
 export(run_app)
@@ -57,4 +68,5 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
 importFrom(stringi,stri_locate)
 importFrom(stringi,stri_locate_all)
+importFrom(utils,data)
 importFrom(utils,globalVariables)
