--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,6 +43,8 @@ Collate:
     build_nav_ui.R
     example_mod_Pipeline.R
     example_mod_Process.R
+    mod_Save_Dataset.R
+    mod_Load_Dataset.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
 LazyData: true
