bug fixed with new steps.infos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
+export(Build_SkippedInfoPanel)
+export(Build_nav_h_ui)
+export(Build_nav_v_ui)
 export(CheckConfig)
 export(CheckProcessCode)
 export(ComposedeWorflowCoreCode)
