bug fixed with new steps.infos for pipeline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(run_app)
 export(run_workflow)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
+import(DT)
 import(shiny)
 importFrom(DT,"%>%")
 importFrom(DT,dataTableProxy)
