cleaning to pass R check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,6 @@ export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
 export(PrevNextBtnClass)
-export(ResetChildren)
 export(Save_Object)
 export(SimpleWorflowCoreCode)
 export(Timestamp)
@@ -65,12 +64,15 @@ export(run_app)
 export(run_workflow)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
-import(DT)
 import(shiny)
 importFrom(DT,"%>%")
+importFrom(DT,DTOutput)
 importFrom(DT,dataTableProxy)
 importFrom(DT,datatable)
+importFrom(DT,formatStyle)
+importFrom(DT,renderDT)
 importFrom(DT,replaceData)
+importFrom(DT,styleEqual)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
