--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,6 @@
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
-export(Build_SkippedInfoPanel)
-export(Build_nav_h_ui)
-export(Build_nav_v_ui)
 export(CheckConfig)
 export(CheckProcessCode)
 export(ComposedeWorflowCoreCode)
@@ -25,6 +22,7 @@ export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
 export(PrevNextBtnClass)
+export(ResetChildren)
 export(Save_Object)
 export(SimpleWorflowCoreCode)
 export(Timestamp)
@@ -73,6 +71,7 @@ importFrom(DT,formatStyle)
 importFrom(DT,renderDT)
 importFrom(DT,replaceData)
 importFrom(DT,styleEqual)
+importFrom(S4Vectors,DataFrame)
 importFrom(config,get)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
