bug fixed with reactiveValues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
 export(CheckConfig)
 export(CheckProcessCode)
-export(ComposedeWorflowCoreCode)
 export(Discover_Skipped_Steps)
 export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
@@ -14,8 +13,13 @@ export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
 export(GetStringStatus)
 export(GetValuesFromChildren)
-export(Get_Code_Update_Config_Pipeline)
-export(Get_Code_for_module_Description)
+export(Get_Code_Declare_widgets)
+export(Get_Code_Update_Config_Variable)
+export(Get_Code_for_General_observeEvents)
+export(Get_Code_for_ObserveEvent_widgets)
+export(Get_Code_for_dataOut)
+export(Get_Code_for_rv_reactiveValues)
+export(Get_Worflow_Core_Code)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
@@ -57,6 +61,7 @@ export(optionsBtnClass)
 export(redBtnClass)
 export(run_app)
 export(run_workflow)
+export(toggleWidget)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
 import(shiny)
