--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     stringi
 Collate: 
     AllGenerics.R
-    data.R
+    config_class.R
     app_config.R
     app_server.R
     app_ui.R
@@ -48,7 +48,6 @@ Collate:
     run_workflow.R
 biocViews: Software, Proteomics, MassSpectrometry
 Encoding: UTF-8
-LazyData: true
 RoxygenNote: 7.1.2
 URL: https://github.com/samWieczorek/Magellan
 BugReports: https://github.com/samWieczorek/Magellan/issues
