--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,9 @@
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
-export(CheckConfig)
 export(CheckProcessCode)
+export(CleanSourceCode)
+export(Config)
 export(Discover_Skipped_Steps)
 export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
@@ -63,6 +64,7 @@ export(redBtnClass)
 export(run_app)
 export(run_workflow)
 export(toggleWidget)
+exportClasses(Config)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
 import(shiny)
