--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
+export(Build_nav_h_ui)
 export(CheckProcessCode)
-export(CleanSourceCode)
 export(Config)
 export(Discover_Skipped_Steps)
 export(FindClosingParenthesis)
