Add code to generate rv.custom list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
 export(GetStringStatus)
 export(GetValuesFromChildren)
+export(Get_AdditionalModule_Core_Code)
+export(Get_Code_Declare_rv_custom)
 export(Get_Code_Declare_widgets)
 export(Get_Code_Update_Config_Variable)
 export(Get_Code_for_General_observeEvents)
