bug fixed with mod_dl

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,10 +48,10 @@ export(mod_Debug_Infos_server)
 export(mod_Debug_Infos_ui)
 export(mod_Load_Dataset_server)
 export(mod_Load_Dataset_ui)
-export(mod_Save_Dataset_server)
-export(mod_Save_Dataset_ui)
 export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
+export(mod_dl_server)
+export(mod_dl_ui)
 export(mod_format_DT_server)
 export(mod_nav_server)
 export(mod_nav_ui)
