--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,7 @@ Collate:
     app_server.R
     app_ui.R
     run_app.R
+    examples_dataset.R
     doc-data.R
     global.R
     mod_bsmodal.R
@@ -46,6 +47,8 @@ Collate:
     code_used_by_external_modules.R
     mod_Debug_Infos.R
     mod_nav.R
+    mod_Save_dataset.R
+    mod_download_btns.R
     general_nav_funcs.R
     pipeline_funcs.R
     process_funcs.R
@@ -56,7 +59,7 @@ Collate:
     run_workflow.R
 biocViews: Software, Proteomics, MassSpectrometry, WorkflowStep
 Encoding: UTF-8
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.2
 URL: https://github.com/prostarproteomics/Magellan
 BugReports: https://github.com/prostarproteomics/Magellan/issues
 Suggests: 
