--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
 export(Build_EncapsulateScreens_ui)
+export(Build_example_dataset)
 export(Build_nav_h_ui)
 export(CheckProcessCode)
 export(CleanSourceCode)
@@ -50,11 +51,16 @@ export(mod_Debug_Infos_server)
 export(mod_Debug_Infos_ui)
 export(mod_Load_Dataset_server)
 export(mod_Load_Dataset_ui)
+export(mod_Save_Dataset_server)
+export(mod_Save_Dataset_ui)
 export(mod_bsmodal_server)
 export(mod_bsmodal_ui)
 export(mod_dl_server)
 export(mod_dl_ui)
+export(mod_download_btns_server)
+export(mod_download_btns_ui)
 export(mod_format_DT_server)
+export(mod_format_DT_ui)
 export(mod_nav_server)
 export(mod_nav_ui)
 export(mod_popover_for_help_server)
@@ -71,14 +77,13 @@ export(toggleWidget)
 exportClasses(Config)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
+import(DT)
 import(shiny)
 importFrom(DT,"%>%")
 importFrom(DT,DTOutput)
-importFrom(DT,dataTableProxy)
-importFrom(DT,datatable)
+importFrom(DT,dataTableOutput)
 importFrom(DT,formatStyle)
 importFrom(DT,renderDT)
-importFrom(DT,replaceData)
 importFrom(DT,styleEqual)
 importFrom(S4Vectors,DataFrame)
 importFrom(config,get)
