--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(redBtnClass)
 export(run_app)
 export(run_workflow)
 export(toggleWidget)
+export(write.excel)
 exportClasses(Config)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
