Update config class with source() files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,22 @@
 
 export()
 export(ActionOn_Child_Changed)
+export(All_Skipped_tag)
+export(Build_EncapsulateScreens_ui)
+export(Build_SkippedInfoPanel)
 export(Build_nav_h_ui)
 export(Build_nav_v_ui)
+export(CheckProcessCode)
+export(CleanSourceCode)
 export(Config)
+export(Discover_Skipped_Steps)
+export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
+export(GetConfig)
+export(GetFirstMandatoryNotValidated)
+export(GetMaxValidated_AllSteps)
+export(GetMaxValidated_BeforePos)
+export(GetStringStatus)
 export(GetValuesFromChildren)
 export(Get_AdditionalModule_Core_Code)
 export(Get_Code_Declare_rv_custom)
@@ -20,15 +32,19 @@ export(Get_Worflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Description_Step_code_for_Pipeline)
 export(Module_Return_Func)
+export(NavPage)
 export(PrepareData2Send)
 export(ResetChildren)
 export(Save_Object)
 export(Timestamp)
+export(ToggleState_NavBtns)
+export(ToggleState_ResetBtn)
 export(ToggleState_Screens)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
 export(createModuleTemplate)
+export(dataModal)
 export(default_pos)
 export(global)
 export(mod_Debug_Infos_server)
