--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(Build_nav_v_ui)
 export(CheckProcessCode)
 export(CleanSourceCode)
 export(Config)
+export(Debug_Infos_server)
+export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
 export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
@@ -31,10 +33,15 @@ export(Get_Code_for_rv_reactiveValues)
 export(Get_Worflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Description_Step_code_for_Pipeline)
+export(LoadCode)
+export(Load_Dataset_server)
+export(Load_Dataset_ui)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
 export(ResetChildren)
+export(Save_Dataset_server)
+export(Save_Dataset_ui)
 export(Save_Object)
 export(Timestamp)
 export(ToggleState_NavBtns)
@@ -43,31 +50,27 @@ export(ToggleState_Screens)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(bsmodal_server)
+export(bsmodal_ui)
 export(createModuleTemplate)
 export(dataModal)
 export(default_pos)
+export(dl_server)
+export(dl_ui)
+export(format_DT_server)
+export(format_DT_ui)
 export(global)
-export(mod_Debug_Infos_server)
-export(mod_Debug_Infos_ui)
-export(mod_Load_Dataset_server)
-export(mod_Load_Dataset_ui)
-export(mod_Save_Dataset_server)
-export(mod_Save_Dataset_ui)
-export(mod_bsmodal_server)
-export(mod_bsmodal_ui)
-export(mod_dl_server)
-export(mod_dl_ui)
-export(mod_format_DT_server)
-export(mod_format_DT_ui)
-export(mod_nav_server)
-export(mod_nav_ui)
-export(mod_popover_for_help_server)
-export(mod_popover_for_help_ui)
-export(mod_timeline_h_server)
-export(mod_timeline_h_ui)
-export(mod_timeline_v_server)
-export(mod_timeline_v_ui)
+export(nav_server)
+export(nav_ui)
+export(popover_for_help_server)
+export(popover_for_help_ui)
+export(pull_fifo)
+export(push_fifo)
 export(run_workflow)
+export(timeline_h_server)
+export(timeline_h_ui)
+export(timeline_v_server)
+export(timeline_v_ui)
 export(toggleWidget)
 export(write.excel)
 exportClasses(Config)
