update in config

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(Get_Code_for_dataOut)
 export(Get_Code_for_rv_reactiveValues)
 export(Get_Worflow_Core_Code)
 export(GlobalSettings)
+export(Insert_Call_to_Config)
 export(Insert_Description_Step_code_for_Pipeline)
 export(LoadCode)
 export(Load_Dataset_server)
