--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,9 @@ export(Upload_Object)
 export(createModuleTemplate)
 export(dataModal)
 export(default_pos)
+export(desc.proc)
+export(gen.pipe)
+export(gen.proc)
 export(global)
 export(mod_Debug_Infos_server)
 export(mod_Debug_Infos_ui)
@@ -67,6 +70,7 @@ export(mod_timeline_h_server)
 export(mod_timeline_h_ui)
 export(mod_timeline_v_server)
 export(mod_timeline_v_ui)
+export(root.pipe)
 export(run_workflow)
 export(toggleWidget)
 export(write.excel)
