--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,10 +36,12 @@ Collate:
     createModuleTemplate.R
     mod_format_DT.R
     utils.R
+    load_code.R
     check_funcs.R
     export_Excel.R
     mod_timeline_h.R
     mod_timeline_v.R
+    example_config_class.R
     code_used_by_external_modules.R
     mod_Debug_Infos.R
     mod_nav.R
@@ -54,7 +56,7 @@ Collate:
     run_workflow.R
 biocViews: Software, WorkflowStep
 Encoding: UTF-8
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
 URL: https://github.com/prostarproteomics/Magellan
 BugReports: https://github.com/prostarproteomics/Magellan/issues
 Suggests: 
