Bug fixed with ll.UI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export()
 export(ActionOn_Child_Changed)
 export(All_Skipped_tag)
-export(Build_EncapsulateScreens_ui)
 export(Build_SkippedInfoPanel)
 export(Build_nav_h_ui)
 export(Build_nav_v_ui)
@@ -13,6 +12,7 @@ export(Config)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
+export(DisplayWholeUI)
 export(FindClosingParenthesis)
 export(Found_Mod_Funcs)
 export(GetConfig)
