Update create template

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,11 @@ export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
 export(write.excel)
+export(write_config_func)
+export(write_header_server_func)
+export(write_process_renderUI_for_steps)
+export(write_stepUI_template)
+export(write_ui_func)
 exportClasses(Config)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
