Bug fixed in pipeline workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(Build_nav_v_ui)
 export(CheckProcessCode)
 export(CleanSourceCode)
 export(Config)
+export(Create_Pipeline_Description_source_file)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
@@ -29,7 +30,7 @@ export(Get_Code_for_General_observeEvents)
 export(Get_Code_for_ObserveEvent_widgets)
 export(Get_Code_for_dataOut)
 export(Get_Code_for_rv_reactiveValues)
-export(Get_Worflow_Core_Code)
+export(Get_Workflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
@@ -52,7 +53,6 @@ export(Upload_Object)
 export(bsmodal_server)
 export(bsmodal_ui)
 export(createModuleTemplate)
-export(create_Description_md_file)
 export(dataModal)
 export(default_pos)
 export(dl_server)
