--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(Build_nav_h_ui)
 export(Build_nav_v_ui)
 export(CheckProcessCode)
 export(CleanSourceCode)
+export(Compute_PCA_nbDimensions)
 export(Config)
 export(Create_Pipeline_Description_source_file)
 export(Debug_Infos_server)
@@ -19,6 +20,7 @@ export(Found_Mod_Funcs)
 export(GetFirstMandatoryNotValidated)
 export(GetMaxValidated_AllSteps)
 export(GetMaxValidated_BeforePos)
+export(GetOnlineZipVersion)
 export(GetStringStatus)
 export(GetValuesFromChildren)
 export(Get_AdditionalModule_Core_Code)
@@ -36,6 +38,8 @@ export(Insert_Call_to_Config)
 export(LoadCode)
 export(Load_Dataset_server)
 export(Load_Dataset_ui)
+export(Load_Workflow_server)
+export(Load_Workflow_ui)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
@@ -60,13 +64,26 @@ export(dl_ui)
 export(format_DT_server)
 export(format_DT_ui)
 export(global)
+export(initComplete)
+export(launchGA)
+export(mod_homepage_server)
+export(mod_homepage_ui)
+export(mod_insert_md_server)
+export(mod_insert_md_ui)
+export(mod_loading_page_server)
+export(mod_loading_page_ui)
 export(nav_server)
 export(nav_ui)
+export(navbarPageWithInputs)
+export(navbarPageWithText)
 export(popover_for_help_server)
 export(popover_for_help_ui)
 export(pull_fifo)
 export(push_fifo)
 export(run_workflow)
+export(shinyInput)
+export(shinyOutput)
+export(shinyValue)
 export(timeline_h_server)
 export(timeline_h_ui)
 export(timeline_v_server)
@@ -97,6 +114,7 @@ importFrom(methods,setMethod)
 importFrom(sass,sass)
 importFrom(sass,sass_file)
 importFrom(shiny,NS)
+importFrom(shiny,reactive)
 importFrom(shiny,tagList)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsPopover)
