--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(Get_Workflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
+export(Load_Dataset_modal_server)
+export(Load_Dataset_modal_ui)
 export(Load_Dataset_server)
 export(Load_Dataset_ui)
 export(Load_Workflow_server)
