--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(Build_SkippedInfoPanel)
 export(Build_nav_h_ui)
 export(Build_nav_v_ui)
 export(CheckProcessCode)
+export(CheckWorkflowDir)
 export(CleanSourceCode)
 export(Compute_PCA_nbDimensions)
 export(Config)
@@ -74,6 +75,8 @@ export(mod_insert_md_server)
 export(mod_insert_md_ui)
 export(mod_loading_page_server)
 export(mod_loading_page_ui)
+export(mod_shinyTree_server)
+export(mod_shinyTree_ui)
 export(nav_server)
 export(nav_ui)
 export(navbarPageWithInputs)
