update with nutshell

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,10 +37,6 @@ export(Get_Workflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
-export(Load_Dataset_modal_server)
-export(Load_Dataset_modal_ui)
-export(Load_Dataset_server)
-export(Load_Dataset_ui)
 export(Load_Workflow_server)
 export(Load_Workflow_ui)
 export(Module_Return_Func)
@@ -69,12 +65,22 @@ export(format_DT_ui)
 export(global)
 export(initComplete)
 export(launchGA)
+export(mod_bug_report_server)
+export(mod_bug_report_ui)
+export(mod_convert_server)
+export(mod_convert_ui)
+export(mod_export_server)
+export(mod_export_ui)
 export(mod_homepage_server)
 export(mod_homepage_ui)
 export(mod_insert_md_server)
 export(mod_insert_md_ui)
 export(mod_loading_page_server)
 export(mod_loading_page_ui)
+export(mod_openfile_server)
+export(mod_openfile_ui)
+export(mod_plots_server)
+export(mod_plots_ui)
 export(mod_shinyTree_server)
 export(mod_shinyTree_ui)
 export(nav_server)
