--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,9 +38,10 @@ Collate:
     mod_shinyTree.R
     load_code.R
     bsmodal.R
+    mod_default_plugins.R
     popover_for_help.R
     createModuleTemplate.R
-    Load_Dataset_modal.R
+    mod_bug_report.R
     format_DT.R
     utils.R
     check_funcs.R
@@ -56,7 +57,6 @@ Collate:
     pipeline_funcs.R
     process_funcs.R
     build_nav_ui.R
-    Load_Dataset.R
     load_save.R
     run_workflow.R
 biocViews: Software, WorkflowStep
