--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,8 +37,6 @@ export(Get_Workflow_Core_Code)
 export(GlobalSettings)
 export(Insert_Call_to_Config)
 export(LoadCode)
-export(Load_Workflow_server)
-export(Load_Workflow_ui)
 export(Module_Return_Func)
 export(NavPage)
 export(PrepareData2Send)
@@ -57,6 +55,14 @@ export(bsmodal_server)
 export(bsmodal_ui)
 export(createModuleTemplate)
 export(dataModal)
+export(default_convert_server)
+export(default_convert_ui)
+export(default_export_server)
+export(default_export_ui)
+export(default_openfile_server)
+export(default_openfile_ui)
+export(default_plots_server)
+export(default_plots_ui)
 export(default_pos)
 export(dl_server)
 export(dl_ui)
@@ -67,22 +73,19 @@ export(initComplete)
 export(launchGA)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
-export(mod_convert_server)
-export(mod_convert_ui)
-export(mod_export_server)
-export(mod_export_ui)
 export(mod_homepage_server)
 export(mod_homepage_ui)
 export(mod_insert_md_server)
 export(mod_insert_md_ui)
+export(mod_load_workflow_server)
+export(mod_load_workflow_ui)
 export(mod_loading_page_server)
 export(mod_loading_page_ui)
-export(mod_openfile_server)
-export(mod_openfile_ui)
-export(mod_plots_server)
-export(mod_plots_ui)
+export(mod_run_workflow_server)
+export(mod_run_workflow_ui)
 export(mod_shinyTree_server)
 export(mod_shinyTree_ui)
+export(module.exists)
 export(nav_server)
 export(nav_ui)
 export(navbarPageWithInputs)
