add several functionalities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,14 +55,12 @@ export(bsmodal_server)
 export(bsmodal_ui)
 export(createModuleTemplate)
 export(dataModal)
-export(default_convert_server)
-export(default_convert_ui)
+export(default_EDA_server)
+export(default_EDA_ui)
 export(default_export_server)
 export(default_export_ui)
 export(default_openfile_server)
 export(default_openfile_ui)
-export(default_plots_server)
-export(default_plots_ui)
 export(default_pos)
 export(dl_server)
 export(dl_ui)
