--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(CheckWorkflowDir)
 export(CleanSourceCode)
 export(Compute_PCA_nbDimensions)
 export(Config)
-export(Create_Pipeline_Description_source_file)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
@@ -51,9 +50,10 @@ export(ToggleState_Screens)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(apModal_server)
+export(apModal_ui)
 export(bsmodal_server)
 export(bsmodal_ui)
-export(createModuleTemplate)
 export(dataModal)
 export(default_EDA_server)
 export(default_EDA_ui)
@@ -69,6 +69,7 @@ export(format_DT_ui)
 export(global)
 export(initComplete)
 export(launchGA)
+export(launch_app)
 export(mod_bug_report_server)
 export(mod_bug_report_ui)
 export(mod_homepage_server)
@@ -101,11 +102,6 @@ export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
 export(write.excel)
-export(write_config_func)
-export(write_header_server_func)
-export(write_process_renderUI_for_steps)
-export(write_stepUI_template)
-export(write_ui_func)
 exportClasses(Config)
 exportMethods(Add_Datasets_to_Object)
 exportMethods(Keep_Datasets_from_Object)
@@ -136,7 +132,5 @@ importFrom(shinyjqui,jqui_draggable)
 importFrom(shinyjs,inlineCSS)
 importFrom(shinyjs,useShinyjs)
 importFrom(stats,setNames)
-importFrom(stringi,stri_locate)
-importFrom(stringi,stri_locate_all)
 importFrom(utils,data)
 importFrom(utils,globalVariables)
