--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,10 +1,13 @@
-pandoc: 2.19.2
-pkgdown: 2.0.6
+pandoc: 2.11.4
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   CreateComplexWorkflow: CreateComplexWorkflow.html
   CreateSimpleWorkflow: CreateSimpleWorkflow.html
   MagellanNTK: MagellanNTK.html
   useMagellanNTKForDevs: useMagellanNTKForDevs.html
-last_built: 2022-12-15T15:20Z
+last_built: 2023-02-10T06:30Z
+urls:
+  reference: http://docs.ropensci.org/MODIStsp/reference
+  article: http://docs.ropensci.org/MODIStsp/articles
 
