--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,9 @@ export(ToggleState_Screens)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(chooseDir)
+export(chooseDir_server)
+export(chooseDir_ui)
 export(dataModal)
 export(default_EDA_server)
 export(default_EDA_ui)
@@ -56,6 +59,9 @@ export(default_export_ui)
 export(default_openfile_server)
 export(default_openfile_ui)
 export(default_pos)
+export(demo_workflow)
+export(dl_server)
+export(dl_ui)
 export(global)
 export(launch_app)
 export(mod_load_workflow_server)
@@ -71,9 +77,8 @@ export(timeline_h_ui)
 export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
-exportMethods(Add_Datasets_to_Object)
-exportMethods(Keep_Datasets_from_Object)
 import(shiny)
+import(shinyFiles)
 importFrom(DT,"%>%")
 importFrom(DT,DTOutput)
 importFrom(DT,formatStyle)
@@ -81,7 +86,6 @@ importFrom(DT,renderDT)
 importFrom(DT,styleEqual)
 importFrom(S4Vectors,DataFrame)
 importFrom(methods,new)
-importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(sass,sass)
 importFrom(sass,sass_file)
