--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(CheckProcessCode)
 export(CheckWorkflowDir)
 export(CleanSourceCode)
 export(Config)
+export(Create_Pipeline_Description_source_file)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
@@ -48,9 +49,16 @@ export(ToggleState_Screens)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(choose.dir)
 export(chooseDir)
 export(chooseDir_server)
 export(chooseDir_ui)
+export(createExtraFunctions)
+export(createExtraModule)
+export(createModuleTemplate)
+export(createTemplate)
+export(createTemplate_server)
+export(createTemplate_ui)
 export(dataModal)
 export(default_EDA_server)
 export(default_EDA_ui)
@@ -60,8 +68,12 @@ export(default_openfile_server)
 export(default_openfile_ui)
 export(default_pos)
 export(demo_workflow)
+export(directoryInput)
 export(dl_server)
 export(dl_ui)
+export(dyn_widgets)
+export(dyn_widgets_server)
+export(dyn_widgets_ui)
 export(global)
 export(launch_app)
 export(mod_load_workflow_server)
@@ -71,12 +83,21 @@ export(nav_server)
 export(nav_ui)
 export(pull_fifo)
 export(push_fifo)
+export(readDirectoryInput)
 export(run_workflow)
 export(timeline_h_server)
 export(timeline_h_ui)
 export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
+export(updateDirectoryInput)
+export(write_addDatasets_func)
+export(write_config_func)
+export(write_header_server_func)
+export(write_keepDatasets_func)
+export(write_process_renderUI_for_steps)
+export(write_stepUI_template)
+export(write_ui_func)
 import(shiny)
 import(shinyFiles)
 importFrom(DT,"%>%")
