--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(Timestamp)
 export(ToggleState_NavBtns)
 export(ToggleState_ResetBtn)
 export(ToggleState_Screens)
+export(Tools_Templates)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
@@ -56,9 +57,6 @@ export(chooseDir_ui)
 export(createExtraFunctions)
 export(createExtraModule)
 export(createModuleTemplate)
-export(createTemplate)
-export(createTemplate_server)
-export(createTemplate_ui)
 export(dataModal)
 export(default_EDA_server)
 export(default_EDA_ui)
