--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(CheckWorkflowDir)
 export(CleanSourceCode)
 export(Config)
 export(Create_Pipeline_Description_source_file)
+export(Create_md_file)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
