--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export(Tools_Templates)
 export(Update_Data2send_Vector)
 export(Update_State_Screens)
 export(Upload_Object)
+export(bsmodal_server)
+export(bsmodal_ui)
 export(choose.dir)
 export(chooseDir)
 export(chooseDir_server)
@@ -75,6 +77,8 @@ export(dyn_widgets_server)
 export(dyn_widgets_ui)
 export(global)
 export(launch_app)
+export(mdEditor_server)
+export(mdEditor_ui)
 export(mod_load_workflow_server)
 export(mod_load_workflow_ui)
 export(module.exists)
@@ -112,6 +116,7 @@ importFrom(sass,sass_file)
 importFrom(shiny,NS)
 importFrom(shiny,tagList)
 importFrom(shinyFiles,shinyDirButton)
+importFrom(shinyjqui,jqui_draggable)
 importFrom(stats,setNames)
 importFrom(utils,data)
 importFrom(utils,globalVariables)
