--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,8 +63,10 @@ export(createModuleTemplate)
 export(dataModal)
 export(default_EDA_server)
 export(default_EDA_ui)
+export(default_add_func)
 export(default_export_server)
 export(default_export_ui)
+export(default_keep_func)
 export(default_openfile_server)
 export(default_openfile_ui)
 export(default_pos)
@@ -94,10 +96,8 @@ export(timeline_v_server)
 export(timeline_v_ui)
 export(toggleWidget)
 export(updateDirectoryInput)
-export(write_addDatasets_func)
 export(write_config_func)
 export(write_header_server_func)
-export(write_keepDatasets_func)
 export(write_process_renderUI_for_steps)
 export(write_stepUI_template)
 export(write_ui_func)
