--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(default_EDA_ui)
 export(default_add_func)
 export(default_export_server)
 export(default_export_ui)
+export(default_extraModule_code)
 export(default_keep_func)
 export(default_openfile_server)
 export(default_openfile_ui)
