--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(Compute_PCA_nbDimensions)
 export(Config)
 export(Create_Pipeline_Description_source_file)
 export(Create_md_file)
+export(Debug_Infos)
 export(Debug_Infos_server)
 export(Debug_Infos_ui)
 export(Discover_Skipped_Steps)
@@ -61,6 +62,9 @@ export(choose.dir)
 export(chooseDir)
 export(chooseDir_server)
 export(chooseDir_ui)
+export(choose_pipeline_server)
+export(choose_pipeline_ui)
+export(clipboard)
 export(convert_conf)
 export(convert_server)
 export(convert_ui)
@@ -155,6 +159,7 @@ export(toggleWidget)
 export(updateDirectoryInput)
 export(view_dataset_server)
 export(view_dataset_ui)
+export(write.excel)
 export(write_config_func)
 export(write_header_server_func)
 export(write_process_renderUI_for_steps)
@@ -186,6 +191,7 @@ import(shinydashboardPlus)
 import(shinyjqui)
 import(shinyjs)
 import(shinythemes)
+import(sos)
 import(tibble)
 import(vioplot)
 import(webshot)
@@ -206,6 +212,7 @@ importFrom(sass,sass_file)
 importFrom(shiny,NS)
 importFrom(shiny,reactive)
 importFrom(shiny,tagList)
+importFrom(shiny,tags)
 importFrom(shinyBS,addPopover)
 importFrom(shinyBS,bsCollapse)
 importFrom(shinyBS,bsCollapsePanel)
